--- a/styles/components/_my-menu.scss
+++ b/styles/components/_my-menu.scss
@@ -4,10 +4,14 @@
 
   position: relative;
 
-  .my-menu-button {
+  &-button {
     width: $button-size;
     height: $button-size;
     overflow: hidden;
+    background-image: url('./assets/images/img-user-default.png');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: contain;
     border: 3px solid $white;
     border-radius: 50%;
     transition: border-color 200ms ease-in-out;
