💄 Add basic font weight

--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -9,10 +9,12 @@
 html {
   font-family: $font-main;
   font-size: $font-size-16;
+  font-weight: 400;
 }
 
 body {
   font-family: $font-main;
+  font-weight: 400;
   color: $primary;
 }
 
