--- a/styles/components/_search-history.scss
+++ b/styles/components/_search-history.scss
@@ -23,6 +23,12 @@
 
   &-item {
     position: relative;
+    border-radius: 2px;
+    transition: background-color 200ms ease-in-out;
+
+    &:hover {
+      background-color: $background;
+    }
 
     .word-button {
       @include text-style(16, $primary);
@@ -41,6 +47,11 @@
       height: $close-button-size;
       font-size: 16px;
       color: $tertiary;
+      transition: color 200ms ease-in-out;
+
+      &:hover {
+        color: $primary;
+      }
     }
   }
 }
