♻️ Replace literal values with global variables and set background color to white

--- a/styles/layouts/_gnb.scss
+++ b/styles/layouts/_gnb.scss
@@ -1,10 +1,11 @@
 .gnb {
   position: relative;
+  background-color: $white;
   border-bottom: 1px solid $border;
 
   &-wrapper {
     @include flexbox(between);
-    height: 50px;
+    height: $gnb-height-sm - 1px;
   }
 
   &-right {
@@ -33,7 +34,7 @@
 
   @include responsive(T) {
     &-wrapper {
-      height: 80px;
+      height: $gnb-height-md - 1px;
     }
 
     &-left {
