--- a/styles/components/_product-carousel.scss
+++ b/styles/components/_product-carousel.scss
@@ -69,10 +69,6 @@
     .thumbnail-item {
       margin: 0 8px 0 0;
 
-      &:last-child {
-        margin-right: 0;
-      }
-
       &.tns-nav-active {
         button {
           border: 2px solid $blue;
@@ -92,6 +88,36 @@
       img {
         display: block;
         width: 56px;
+      }
+    }
+  }
+
+  @include responsive(D) {
+    @include flexbox(end, start);
+    flex-direction: row-reverse;
+
+    &-slider {
+      width: 500px;
+      height: 500px;
+      margin: 0;
+    }
+
+    &-thumbnail {
+      margin-right: 8px;
+    }
+
+    .thumbnail-list {
+      flex-direction: column;
+    }
+
+    .thumbnail-item {
+      margin-right: 0;
+      margin-bottom: 8px;
+
+      button,
+      img {
+        width: 75px;
+        height: 75px;
       }
     }
   }
