--- a/styles/layouts/_product-tab.scss
+++ b/styles/layouts/_product-tab.scss
@@ -33,14 +33,39 @@
       white-space: nowrap;
       border-bottom: 2px solid transparent;
 
-      &:hover {
-        color: $blue;
-      }
-
       .badge {
         @include text-style(12, $secondary);
         margin-left: 4px;
       }
+    }
+  }
+
+  @include responsive(T) {
+    height: 54px;
+    background-color: $background;
+    border-bottom: 0;
+
+    &-list {
+      height: 54px;
+      margin: 0;
+    }
+
+    &-item {
+      button {
+        @include text-style(16);
+        height: 54px;
+
+        .badge {
+          @include text-style(16);
+          margin-left: 8px;
+        }
+      }
+    }
+  }
+
+  @include responsive(D) {
+    &-item button:hover {
+      color: $blue;
     }
   }
 }
