🚧 Handle answered inquiry

--- a/styles/components/_inquiry-card.scss
+++ b/styles/components/_inquiry-card.scss
@@ -21,6 +21,10 @@
     .detail {
       margin-bottom: 8px;
       color: $primary;
+
+      .is-answered {
+        color: $blue;
+      }
     }
 
     .misc {
@@ -35,27 +39,43 @@
   &-body {
     @include text-style(13);
 
-    .question-content {
+    .inquiry-content {
       position: relative;
       padding-left: 20px;
 
-      span {
-        position: absolute;
-        top: 0;
-        left: 0;
-        font-weight: 700;
-        color: $blue;
+      &:first-child:not(:last-child) {
+        margin-bottom: 12px;
+      }
+    }
+
+    span {
+      position: absolute;
+      top: 0;
+      left: 0;
+      font-weight: 700;
+      color: $blue;
+    }
+
+    p {
+      @include flexbox(start);
+      color: $primary;
+
+      i {
+        margin-right: 8px;
+        font-size: 16px;
+        color: $tertiary;
+      }
+    }
+
+    .seller {
+      @include flexbox(start);
+
+      strong {
+        margin-right: 4px;
       }
 
-      p {
-        @include flexbox(start);
-        color: $primary;
-
-        i {
-          margin-right: 8px;
-          font-size: 16px;
-          color: $tertiary;
-        }
+      time {
+        @include text-style(12, $tertiary);
       }
     }
   }
@@ -68,12 +88,24 @@
     &-body {
       @include text-style(14);
 
-      .question-content {
+      .inquiry-content {
         padding-left: 24px;
 
-        span {
+        &:first-child:not(:last-child) {
+          margin-bottom: 16px;
+        }
+      }
+
+      .seller {
+        margin-bottom: 8px;
+
+        strong {
           @include text-style(16);
         }
+      }
+
+      span {
+        @include text-style(16);
       }
     }
   }
