--- a/styles/main.scss
+++ b/styles/main.scss
@@ -47,6 +47,7 @@
 @import './components/review-card';
 @import './components/product-inquiry';
 @import './components/inquiry-card';
+@import './components/product-shipment';
 
 @import './layouts/grid';
 @import './layouts/gnb';
