--- a/styles/main.scss
+++ b/styles/main.scss
@@ -48,6 +48,7 @@
 @import './components/product-inquiry';
 @import './components/inquiry-card';
 @import './components/product-shipment';
+@import './components/product-recommendation';
 @import './components/product-card';
 
 @import './layouts/grid';
