--- a/styles/components/_product-recommendation.scss
+++ b/styles/components/_product-recommendation.scss
@@ -17,7 +17,7 @@
 
       &:active {
         img {
-          transform: scale(1.1);
+          transform: translate(-50%, -50%) scale(1.1);
         }
 
         .product-card-title {
@@ -42,7 +42,7 @@
     .product-item {
       a:hover {
         img {
-          transform: scale(1.1);
+          transform: translate(-50%, -50%) scale(1.1);
         }
 
         .product-card-title {
