--- a/styles/components/_product-card.scss
+++ b/styles/components/_product-card.scss
@@ -26,7 +26,7 @@
 
   &-title {
     @include text-style(13, $dark);
-    width: 92%;
+    @include line-clamp(2);
     font-weight: 400;
     line-height: 16px;
   }
