--- a/styles/components/_gallery-card.scss
+++ b/styles/components/_gallery-card.scss
@@ -4,10 +4,16 @@
   border-radius: 6px;
 
   &-image {
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%;
+
     img {
+      @include pos-center;
       display: block;
       width: 100%;
-      height: auto;
+      height: 100%;
+      object-fit: cover;
     }
   }
 
