--- a/styles/main.scss
+++ b/styles/main.scss
@@ -53,6 +53,7 @@
 @import './components/product-recommendation';
 @import './components/product-card';
 @import './components/gallery-card';
+@import './components/user-gallery';
 
 @import './layouts/grid';
 @import './layouts/gnb';
