--- a/styles/components/_user-gallery.scss
+++ b/styles/components/_user-gallery.scss
@@ -1,13 +1,58 @@
 .user-gallery {
   margin: 0 -#{$grid-margin};
+  overflow: hidden;
 
   &-slider {
+    position: relative;
     margin-bottom: 4px;
+  }
+
+  &-controls {
+    @include pos-center;
+    @include flexbox(between);
+    width: 100%;
+    padding: 0 52px;
+
+    .control-button {
+      @include flexbox;
+      width: 40px;
+      height: 40px;
+      font-size: 28px;
+      color: $primary;
+      background-color: $white;
+      border-radius: 50%;
+      transition: background-color 100ms ease-in-out, color 100ms ease-in-out;
+
+      &.is-prev {
+        i {
+          margin-left: -2px;
+          transform: rotate(90deg);
+        }
+      }
+
+      &.is-next {
+        i {
+          margin-right: -2px;
+          transform: rotate(-90deg);
+        }
+      }
+
+      &:hover {
+        color: $white;
+        background-color: $blue;
+      }
+
+      &[disabled] {
+        visibility: hidden;
+      }
+    }
   }
 
   .thumbnail-list {
     @include flexbox(start);
+    @include no-scrollbar;
     padding-left: 2px;
+    overflow-x: auto;
   }
 
   .thumbnail-item {
@@ -29,13 +74,14 @@
       height: 64px;
       overflow: hidden;
       border-radius: 4px;
-    }
 
-    img {
-      display: block;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+      img {
+        display: block;
+        width: 64px;
+        height: 64px;
+        min-width: 64px;
+        object-fit: cover;
+      }
     }
   }
 
@@ -56,6 +102,12 @@
       button {
         width: 75px;
         height: 75px;
+
+        img {
+          width: 75px;
+          height: 75px;
+          min-width: 75px;
+        }
       }
     }
   }
