--- a/styles/components/_gallery-card.scss
+++ b/styles/components/_gallery-card.scss
@@ -32,6 +32,11 @@
       flex-shrink: 0;
     }
 
+    .avatar-32:active,
+    .user-name:active {
+      opacity: 0.4;
+    }
+
     .avatar-32 {
       margin-right: 8px;
     }
@@ -46,6 +51,15 @@
       flex-grow: 1;
       padding-right: 8px;
       font-weight: 700;
+    }
+  }
+
+  @include responsive(D) {
+    &-detail {
+      .avatar-32:hover,
+      .user-name:hover {
+        opacity: 0.4;
+      }
     }
   }
 }
